# tree-climber-mcp

./: GEMINI.md  README.md  cli_agent_mcp.py  cli_constants.py  cli_tool.py  command_line_interface_tool.py  command_line_server.py  main.py  mcp_tool_def.py  pyproject.toml  run_server.py  run_tests.py  server_constants.py  shell_manager.py  tool_base.py  tool_manager.py
src/: command_line_server.py  filesystem_tools.py  server_constants.py  shell_manager.py
src/tree_climber_mcp/: __init__.py  __main__.py  config.py  security.py  server.py  shell.py
src/tree_climber_mcp/tools/: __init__.py  command.py  filesystem.py
tests/: __init__.py  conftest.py  test_cli_tool.py  test_filesystem_tools.py  test_main.py  test_security.py  test_server.py  test_server_constants.py  test_shell.py  test_shell_manager.py
tests/tools/: test_command.py  test_filesystem.py
