[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-climber-mcp"
version = "0.1.0"
description = "MCP server for a guarded xonsh shell and cwd-scoped filesystem tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.11.0",
    "pexpect>=4.9.0",
    "xonsh>=0.19.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
tree-climber-mcp = "tree_climber_mcp.__main__:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
